--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GO BUY</title>
     <link rel="stylesheet" href="styles/index-style.css">
+    <link rel="stylesheet" href="styles/medias-queries.css">
 </head>
 
 <body>
@@ -15,40 +16,128 @@
     </header>
     <main>
         <div class="container-product">
-            <div class="father-div-img">
-                <div class="div-img">
-                    <img src="img/pd.jpg" alt="">
-                </div>
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
             </div>
         </div>
         <div class="container-product">
-            <div class="father-div-img">
-                <div class="div-img">
-                    <img src="img/pd.jpg" alt="">
-                </div>
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
             </div>
         </div>
         <div class="container-product">
-            <div class="father-div-img">
-                <div class="div-img">
-                    <img src="img/pd.jpg" alt="">
-                </div>
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
             </div>
         </div>
         <div class="container-product">
-            <div class="father-div-img">
-                <div class="div-img">
-                    <img src="img/pd.jpg" alt="">
-                </div>
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
