--- a/index.html
+++ b/index.html
@@ -6,26 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GO BUY</title>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/index-style.css">
     <link rel="stylesheet" href="styles/medias-queries.css">
 </head>
 
 <body>
     <header>
-        <a href="index.html"><img src="img/go-by-logo.png" alt="Go Buy (LOGO)"></a>
+        <a href="index.html"><img src="img/go-buy-logo.png" alt="Go Buy (LOGO)"></a>
     </header>
     <main>
         <div class="container-product">
             <div class="div-img">
                 <img src="img/pd.jpg" alt="">
             </div>
-            <div class="div-a-button">
-                <a href="#">IR PARA O SITE</a>
-            </div>
-        </div>
-        <div class="container-product">
-            <div class="div-img">
-                <img src="img/pd.jpg" alt="">
+            <div class="div-pm">
+                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -35,13 +31,8 @@
             <div class="div-img">
                 <img src="img/pd.jpg" alt="">
             </div>
-            <div class="div-a-button">
-                <a href="#">IR PARA O SITE</a>
-            </div>
-        </div>
-        <div class="container-product">
-            <div class="div-img">
-                <img src="img/pd.jpg" alt="">
+            <div class="div-pm">
+                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -51,13 +42,8 @@
             <div class="div-img">
                 <img src="img/pd.jpg" alt="">
             </div>
-            <div class="div-a-button">
-                <a href="#">IR PARA O SITE</a>
-            </div>
-        </div>
-        <div class="container-product">
-            <div class="div-img">
-                <img src="img/pd.jpg" alt="">
+            <div class="div-pm">
+                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -67,13 +53,8 @@
             <div class="div-img">
                 <img src="img/pd.jpg" alt="">
             </div>
-            <div class="div-a-button">
-                <a href="#">IR PARA O SITE</a>
-            </div>
-        </div>
-        <div class="container-product">
-            <div class="div-img">
-                <img src="img/pd.jpg" alt="">
+            <div class="div-pm">
+                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -83,13 +64,8 @@
             <div class="div-img">
                 <img src="img/pd.jpg" alt="">
             </div>
-            <div class="div-a-button">
-                <a href="#">IR PARA O SITE</a>
-            </div>
-        </div>
-        <div class="container-product">
-            <div class="div-img">
-                <img src="img/pd.jpg" alt="">
+            <div class="div-pm">
+                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -99,13 +75,8 @@
             <div class="div-img">
                 <img src="img/pd.jpg" alt="">
             </div>
-            <div class="div-a-button">
-                <a href="#">IR PARA O SITE</a>
-            </div>
-        </div>
-        <div class="container-product">
-            <div class="div-img">
-                <img src="img/pd.jpg" alt="">
+            <div class="div-pm">
+                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -115,13 +86,8 @@
             <div class="div-img">
                 <img src="img/pd.jpg" alt="">
             </div>
-            <div class="div-a-button">
-                <a href="#">IR PARA O SITE</a>
-            </div>
-        </div>
-        <div class="container-product">
-            <div class="div-img">
-                <img src="img/pd.jpg" alt="">
+            <div class="div-pm">
+                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -131,6 +97,9 @@
             <div class="div-img">
                 <img src="img/pd.jpg" alt="">
             </div>
+            <div class="div-pm">
+                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+            </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
             </div>
@@ -138,6 +107,86 @@
         <div class="container-product">
             <div class="div-img">
                 <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+            </div>
+            <div class="div-a-button">
+                <a href="#">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -147,7 +196,7 @@
     <footer>
         <div class="container-footer">
             <div class="div-footer-img">
-                <img src="img/go-by-logo.png" alt="Go Buy (LOGO)">
+                <img src="img/go-buy-logo.png" alt="Go Buy (LOGO)">
             </div>
             <div class="div-p">
                 <p>contacthelder2005@gmail.com</p>
