--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/index-style.css">
     <link rel="stylesheet" href="styles/medias-queries.css">
+    <meta name="google-site-verification" content="IErxJ-zzJLRymx8YYdIlD87pPBNU3Z3bHH8ciXPcoyU" />
 </head>
 
 <body>
