--- a/index.html
+++ b/index.html
@@ -16,13 +16,19 @@
     <header>
         <a href="index.html"><img src="img/go-buy-logo.png" alt="Go Buy (LOGO)"></a>
     </header>
-    <main>
+
+    <div class="search-container">
+        <input type="search" id="search-bar" placeholder="Pesquisar produto...">
+    </div>
+
+    <main id="products-container">
         <div class="container-product">
             <div class="div-img">
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+                <p>fone b441 </p>
+                <p class="description-product">fone 7.1 </p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -33,7 +39,8 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+                <p>p2</p>
+                <p class="description-product">fone 7.1 </p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -44,7 +51,8 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+                <p>p3</p>
+                <p class="description-product">fone </p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -55,7 +63,8 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+                <p>p1</p>
+                <p class="description-product"></p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -66,7 +75,8 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+                <p>p1</p>
+                <p class="description-product"></p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -77,7 +87,8 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+                <p>p1</p>
+                <p class="description-product"></p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -88,7 +99,8 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+                <p>p1</p>
+                <p class="description-product"></p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -99,7 +111,8 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+                <p>p1</p>
+                <p class="description-product"></p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -110,7 +123,8 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+                <p>p1</p>
+                <p class="description-product"></p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -121,7 +135,8 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+                <p>p1</p>
+                <p class="description-product"></p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -132,7 +147,8 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+                <p>p1</p>
+                <p class="description-product"></p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -143,7 +159,8 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+                <p>p1</p>
+                <p class="description-product"></p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -154,7 +171,8 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+                <p>p1</p>
+                <p class="description-product"></p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -165,7 +183,8 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+                <p>p1</p>
+                <p class="description-product"></p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -176,7 +195,8 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+                <p>p1</p>
+                <p class="description-product"></p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -187,23 +207,54 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>Lorem ipsum dolor sit voluptatib, magnam vel us velit nisi?</p>
+                <p>p1</p>
+                <p class="description-product"></p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
             </div>
         </div>
     </main>
+
     <footer>
         <div class="container-footer">
             <div class="div-footer-img">
                 <img src="img/go-buy-logo.png" alt="Go Buy (LOGO)">
             </div>
-            <div class="div-p">
-                <p>contacthelder2005@gmail.com</p>
+            <div class="container-p-social">
+                <div class="div-p">
+                    <p>contacthelder2005@gmail.com</p>
+                </div>
+                <div class="div-medias-social">
+                    <a href="#"><img src="img/youtube.png" alt="icone YouTube"></a>
+                    <a href="#"><img src="img/tiktok.png" alt="icone Instagram"></a>
+                    <a href="#"><img src="img/instagram.png" alt="icone Instagram"></a>
+                </div>
             </div>
         </div>
     </footer>
+
+    <script>
+        const searchBar = document.getElementById('search-bar');
+        const productsContainer = document.getElementById('products-container');
+        const products = productsContainer.getElementsByClassName('container-product');
+
+        searchBar.addEventListener('input', function () {
+        const term = searchBar.value.toLowerCase();
+
+        Array.from(products).forEach(function (product) {
+            const titleEls = product.querySelectorAll('.div-pm p');
+            const title = Array.from(titleEls)
+            .reduce((text, el) => text + el.textContent.toLowerCase(), '');
+            if (title.includes(term)) {
+            product.style.display = 'block';
+            } else {
+            product.style.display = 'none';
+            }
+        });
+        });  
+    </script>
+
 </body>
 
 </html>
