--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/index-style.css">
     <link rel="stylesheet" href="styles/medias-queries.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="google-site-verification" content="IErxJ-zzJLRymx8YYdIlD87pPBNU3Z3bHH8ciXPcoyU" />
 </head>
 
@@ -27,8 +28,8 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>fone b441 </p>
-                <p class="description-product">fone 7.1 </p>
+                <p>Headset Logitech G435, 7.1, Bluetooth Lightspeed, Microfone Embutido, Gamer</p>
+                <p class="description-product">sacola gamer</p>
             </div>
             <div class="div-a-button">
                 <a href="#">IR PARA O SITE</a>
@@ -218,17 +219,23 @@
 
     <footer>
         <div class="container-footer">
-            <div class="div-footer-img">
+            <div class="div-footer-img-p">
                 <img src="img/go-buy-logo.png" alt="Go Buy (LOGO)">
+                <p>&#169; 2023 Go Buy – Todos os direitos reservados.</p>
             </div>
             <div class="container-p-social">
+                <div class="div-medias-social">
+                    <div class="div-p-social">
+                        <p>SIGA-NOS</p>
+                    </div>
+                    <div class="div-icons-social">
+                        <a href="#"><img src="img/youtube.png" alt="icone YouTube"></a>
+                        <a href="#"><img src="img/tiktok.png" alt="icone Instagram"></a>
+                        <a href="#"><img src="img/instagram.png" alt="icone Instagram"></a>
+                    </div>
+                </div>
                 <div class="div-p">
                     <p>contacthelder2005@gmail.com</p>
-                </div>
-                <div class="div-medias-social">
-                    <a href="#"><img src="img/youtube.png" alt="icone YouTube"></a>
-                    <a href="#"><img src="img/tiktok.png" alt="icone Instagram"></a>
-                    <a href="#"><img src="img/instagram.png" alt="icone Instagram"></a>
                 </div>
             </div>
         </div>
