Search no Header junto ao Logo
Agora o search ficado ao lado do logo, no header.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="img/go-buy-logo.png" alt="Go Buy (LOGO)"></a>
+        <div class="header-container-img-search">
+            <div class="div-a-img-h">
+                <a href="index.html">
+                    <img src="img/go-buy-logo.png" alt="Go Buy (LOGO)">
+                </a>
+            </div>
+            <div class="search-container">
+                <input type="search" id="search-bar" placeholder="Pesquisar produto...">
+            </div>
+        </div>
     </header>
-
-    <div class="search-container">
-        <input type="search" id="search-bar" placeholder="Pesquisar produto...">
-    </div>
 
     <main id="products-container">
         <div class="container-product">
