--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GO BUY</title>
+    <title>GoBuy</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/index-style.css">
     <link rel="stylesheet" href="styles/medias-queries.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <meta name="google-site-verification" content="IErxJ-zzJLRymx8YYdIlD87pPBNU3Z3bHH8ciXPcoyU" />
 </head>
 
 <body>
@@ -234,9 +233,9 @@
                         <p>SIGA-NOS</p>
                     </div>
                     <div class="div-icons-social">
-                        <a href="#"><img src="img/youtube.png" alt="icone YouTube"></a>
-                        <a href="#"><img src="img/tiktok.png" alt="icone Instagram"></a>
-                        <a href="#"><img src="img/instagram.png" alt="icone Instagram"></a>
+                        <a href="#" target="_blank"><img src="img/youtube.png" alt="icone YouTube"></a>
+                        <a href="https://www.tiktok.com/@gobuy.products" target="_blank"><img src="img/tiktok.png" alt="icone Instagram"></a>
+                        <a href="#" target="_blank"><img src="img/instagram.png" alt="icone Instagram"></a>
                     </div>
                 </div>
                 <div class="div-p">
