--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             </div>
             <div class="search-container">
                 <input type="search" id="search-bar" placeholder="Pesquisar produto...">
+                <button id="search-button"><span id="search-icon" class="material-icons">search</span></button>
             </div>
         </div>
     </header>
@@ -80,7 +81,72 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
+                <p>p1 g</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1 gamer</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
                 <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1 ga</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1 gamer 2</p>
                 <p class="description-product"></p>
             </div>
             <div class="div-a-button">
@@ -178,74 +244,11 @@
                 <a href="#" target="_blank">IR PARA O SITE</a>
             </div>
         </div>
-
-        <div class="container-product">
-            <div class="div-img">
-                <img src="img/pd.jpg" alt="">
-            </div>
-            <div class="div-pm">
-                <p>p1</p>
-                <p class="description-product"></p>
-            </div>
-            <div class="div-a-button">
-                <a href="#" target="_blank">IR PARA O SITE</a>
-            </div>
-        </div>
-
-        <div class="container-product">
-            <div class="div-img">
-                <img src="img/pd.jpg" alt="">
-            </div>
-            <div class="div-pm">
-                <p>p1</p>
-                <p class="description-product"></p>
-            </div>
-            <div class="div-a-button">
-                <a href="#" target="_blank">IR PARA O SITE</a>
-            </div>
-        </div>
-
-        <div class="container-product">
-            <div class="div-img">
-                <img src="img/pd.jpg" alt="">
-            </div>
-            <div class="div-pm">
-                <p>p1</p>
-                <p class="description-product"></p>
-            </div>
-            <div class="div-a-button">
-                <a href="#" target="_blank">IR PARA O SITE</a>
-            </div>
-        </div>
-
-        <div class="container-product">
-            <div class="div-img">
-                <img src="img/pd.jpg" alt="">
-            </div>
-            <div class="div-pm">
-                <p>p1</p>
-                <p class="description-product"></p>
-            </div>
-            <div class="div-a-button">
-                <a href="#" target="_blank">IR PARA O SITE</a>
-            </div>
-        </div>
-
-        <div class="container-product">
-            <div class="div-img">
-                <img src="img/pd.jpg" alt="">
-            </div>
-            <div class="div-pm">
-                <p>p1</p>
-                <p class="description-product"></p>
-            </div>
-            <div class="div-a-button">
-                <a href="#" target="_blank">IR PARA O SITE</a>
-            </div>
-        </div>
-
+        
     </main>
 
+    <button id="load-more">safafa</button>
+    
     <footer>
         <div class="container-footer">
             <div class="div-footer-img-p">
