Tentando terminar o algoritimo de pesquisa da search bar

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="div-pm">
                 <p>Headset Gamer Logitech G435 LIGHTSPEED, Conexão USB e Bluetooth, Microfone Embutido, PC, PS4, PS5, Mobile, Preto</p>
-                <p class="description-product">amazon</p>
+                <p class="description-product">Amazon</p>
             </div>
             <div class="div-a-button">
                 <a href="https://amzn.to/3xARZb4" target="_blank">IR PARA O SITE</a>
@@ -56,7 +56,7 @@
             </div>
             <div class="div-pm">
                 <p>Headset Gamer Redragon Zeus X RGB USB 7.1 Surround Sound Virtual H510-RGB, Preto</p>
-                <p class="description-product">amazon</p>
+                <p class="description-product">Amazon</p>
             </div>
             <div class="div-a-button">
                 <a href="https://amzn.to/3lMYPaS" target="_blank">IR PARA O SITE</a>
@@ -69,7 +69,7 @@
             </div>
             <div class="div-pm">
                 <p>Headset Gamer Logile, g345 Preto</p>
-                <p class="description-product">aliexpress</p>
+                <p class="description-product">Amazon</p>
             </div>
             <div class="div-a-button">
                 <a href="https://amzn.to/3xARZb4" target="_blank">IR PARA O SITE</a>
@@ -78,27 +78,27 @@
 
         <div class="container-product">
             <div class="div-img">
-                <img src="img/pd.jpg" alt="">
+                <img src="https://s.click.aliexpress.com/e/_DBgAFqZ" alt="">
             </div>
             <div class="div-pm">
-                <p>p1 g</p>
-                <p class="description-product"></p>
+                <p>Microfone dinâmico fifine para windows & portátil, microfone usb para jogos youtube com botão tap-to-mute/luz rgb/fone de ouvido jack-k658</p>
+                <p class="description-product">Aliexpress</p>
             </div>
             <div class="div-a-button">
-                <a href="#" target="_blank">IR PARA O SITE</a>
+                <a href="https://s.click.aliexpress.com/e/_DeaQ3L3" target="_blank">IR PARA O SITE</a>
             </div>
         </div>
 
         <div class="container-product">
             <div class="div-img">
-                <img src="img/pd.jpg" alt="">
+                <img src="https://s.click.aliexpress.com/e/_Dns8r5X" alt="">
             </div>
             <div class="div-pm">
-                <p>p1 gamer</p>
-                <p class="description-product"></p>
+                <p>Fifine Fone de Ouvido RGB Dinâmico para Jogos, Headphone com Microfone, Som Surround 7.1, Opções de Equalização, Música e Filme, PC PS4 PS5 PS3</p>
+                <p class="description-product">Aliexpress</p>
             </div>
             <div class="div-a-button">
-                <a href="#" target="_blank">IR PARA O SITE</a>
+                <a href="https://s.click.aliexpress.com/e/_DcJCo9b" target="_blank">IR PARA O SITE</a>
             </div>
         </div>
 
@@ -133,7 +133,7 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>p1</p>
+                <p>p1 g</p>
                 <p class="description-product"></p>
             </div>
             <div class="div-a-button">
@@ -159,7 +159,7 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>p1</p>
+                <p>p1 gamer</p>
                 <p class="description-product"></p>
             </div>
             <div class="div-a-button">
@@ -172,7 +172,7 @@
                 <img src="img/pd.jpg" alt="">
             </div>
             <div class="div-pm">
-                <p>p1</p>
+                <p>p1 gamer 1</p>
                 <p class="description-product"></p>
             </div>
             <div class="div-a-button">
@@ -245,9 +245,476 @@
             </div>
         </div>
         
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
+        <div class="container-product">
+            <div class="div-img">
+                <img src="img/pd.jpg" alt="">
+            </div>
+            <div class="div-pm">
+                <p>p1</p>
+                <p class="description-product"></p>
+            </div>
+            <div class="div-a-button">
+                <a href="#" target="_blank">IR PARA O SITE</a>
+            </div>
+        </div>
+
     </main>
 
-    <button id="load-more">safafa</button>
+    <div id="load-more-div"><button id="load-more">safafa</button></div>
     
     <footer>
         <div class="container-footer">
