Search bar + Carregar Mais
SearchBar ja está ótima, agora falta resolver algumas coisa do carregar mais, que inclusive ja está bem funcional

--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
 
     </main>
 
-    <div id="load-more-div"><button id="load-more">safafa</button></div>
+    <div id="load-more-div"><button id="load-more">Carregar Mais</button></div>
     
     <footer>
         <div class="container-footer">
@@ -742,8 +742,7 @@
     </footer>
 
     <script src="js/search-script.js"></script>
-    <script src="js/selected-link.js"></script>
-    <script src="js/font-weight-search-bar.js"></script>
+    <script src="js/load-product.js"></script>
 
 </body>
 
